# svncli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
svncli/: __init__.py  __main__.py  api.py  cli.py  client.py  models.py  sync.py  util.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_e2e.py  test_models.py  test_sync.py  test_unhappy.py  test_util.py
